--- a/native/src/seal/util/config.h.in
+++ b/native/src/seal/util/config.h.in
@@ -2,6 +2,10 @@
 // Licensed under the MIT license.
 
 #define SEAL_VERSION "@SEAL_VERSION@"
+#define SEAL_VERSION_MAJOR @SEAL_VERSION_MAJOR@
+#define SEAL_VERSION_MINOR @SEAL_VERSION_MINOR@
+#define SEAL_VERSION_PATCH @SEAL_VERSION_PATCH@
+
 #cmakedefine SEAL_DEBUG
 #cmakedefine SEAL_USE_IF_CONSTEXPR
 #cmakedefine SEAL_USE_MAYBE_UNUSED
