--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -163,7 +163,7 @@
     <CLRSupport>false</CLRSupport>
   </PropertyGroup>
   <PropertyGroup>
-    <ZlibLib Condition="'$(ZLIB_ROOT)'!=''">zdll.lib</ZlibLib>
+    <ZlibName Condition="'$(ZLIB_ROOT)'!=''">zlibstatic.lib</ZlibName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -234,8 +234,8 @@
       <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
     <Lib>
-      <AdditionalDependencies>Bcrypt.lib;$(ZlibLib)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ZLIB_ROOT)\$(Platform)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Bcrypt.lib;$(ZlibName)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ZLIB_ROOT)\Release</AdditionalLibraryDirectories>
       <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
@@ -265,8 +265,8 @@
       <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
     <Lib>
-      <AdditionalDependencies>Bcrypt.lib;$(ZlibLib)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ZLIB_ROOT)\$(Platform)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Bcrypt.lib;$(ZlibName)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ZLIB_ROOT)\Release</AdditionalLibraryDirectories>
       <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
@@ -300,8 +300,8 @@
       <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
     <Lib>
-      <AdditionalDependencies>Bcrypt.lib;$(ZlibLib)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ZLIB_ROOT)\$(Platform)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Bcrypt.lib;$(ZlibName)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ZLIB_ROOT)\Release</AdditionalLibraryDirectories>
       <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
@@ -334,8 +334,8 @@
       <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
     <Lib>
-      <AdditionalDependencies>Bcrypt.lib;$(ZlibLib)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ZLIB_ROOT)\$(Platform)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Bcrypt.lib;$(ZlibName)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ZLIB_ROOT)\Release</AdditionalLibraryDirectories>
       <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
