--- a/dotnet/nuget/SEALNet.nuspec.in
+++ b/dotnet/nuget/SEALNet.nuspec.in
@@ -20,7 +20,9 @@
   </metadata>
   <files>
     <file src="SEALNet.targets" target="build\Microsoft.Research.SEALNet.targets" />
-    <file src="..\lib\x64\$Configuration$\sealnetnative.dll" target="lib\x64\" />
+    <file src="..\lib\x64\$Configuration$\sealnetnative.dll" target="runtimes\win10-x64\native" />
+    <file src="..\lib\libsealnetnative.so.@SEAL_VERSION@" target="runtimes\linux-x64\native" />
+    <file src="..\lib\libsealnetnative.@SEAL_VERSION@.dylib" target="runtimes\osx-x64\native" />
     <file src="..\lib\$Configuration$\netstandard2.0\SEALNet.*" target="lib\netstandard2.0\" exclude="**\*.pdb" />
     <file src="..\..\LICENSE" target="LICENSE" />
   </files>
