--- a/dotnet/nuget/SEALNet.targets
+++ b/dotnet/nuget/SEALNet.targets
@@ -5,8 +5,11 @@
 
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <NativeLibs Include="$(MSBuildThisFileDirectory)..\lib\x64\sealnetnative.dll" />
-    <None Include="@(NativeLibs)">
+    <SEALNetNativeBinaryFiles Condition="'$(OS)' == 'Windows_NT'" Include="$(MSBuildThisFileDirectory)../lib/x64/$(Configuration)/sealnetnative.*" />
+    <SEALNetNativeBinaryFiles Condition="'$(OS)' == 'Unix'" Include="$(MSBuildThisFileDirectory)../lib/libsealnetnative.*" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="@(SEALNetNativeBinaryFiles)">
       <Link>sealnetnative.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
