--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,8 @@ stages:
             displayName: Windows
             pool:
                 vmImage: 'windows-latest'
+            variables:
+                ZLIB_ROOT: '$(Build.SourcesDirectory)\native\zlib-cmake\zlib-src'
             steps:
                 - template: templates/windows-build.yml
                   parameters:
