--- a/templates/windows-build.yml
+++ b/templates/windows-build.yml
@@ -28,6 +28,18 @@ steps:
           outputFormat: sarif
           debugMode: false
 
+    - task: CMake@1
+      displayName: 'CMake ZLIB'
+      inputs:
+          workingDirectory: native/zlib-cmake
+          cmakeArgs: '.'
+
+    - task: CMake@1
+      displayName: 'Build ZLIB'
+      inputs:
+          workingDirectory: native/zlib-cmake
+          cmakeArgs: '--build . --config Release'
+
     - task: VSBuild@1
       displayName: 'Build solution SEAL'
       inputs:
