--- a/dotnet/nuget/SEALNet.nuspec.in
+++ b/dotnet/nuget/SEALNet.nuspec.in
@@ -8,14 +8,14 @@
     <id>Microsoft.Research.SEALNet</id>
     <version>@SEAL_VERSION@</version>
     <title>Microsoft SEAL</title>
-    <authors>Microsoft Research</authors>
-    <owners>Microsoft Corporation</owners>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
     <projectUrl>http://sealcrypto.org</projectUrl>
     <license type="file">LICENSE</license>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Microsoft SEAL is an easy-to-use and powerful open source homomorphic encryption library, developed by researchers in the Cryptography and Privacy Research Group at Microsoft Research. Microsoft SEAL is licensed under the MIT license.</description>
     <releaseNotes>https://GitHub.com/Microsoft/SEAL</releaseNotes>
-    <copyright>Copyright 2019</copyright>
+    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
     <tags>c# crypto cryptography homomorphic encryption</tags>
   </metadata>
   <files>
