Parameter needs to be a string

--- a/dotnet/nuget/SEALNet.targets.in
+++ b/dotnet/nuget/SEALNet.targets.in
@@ -5,15 +5,15 @@
 
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-  	<SEALNetNativeBinaryFiles Condition="$([MSBuild]::IsOsPlatform(Windows))" Include="$(MSBuildThisFileDirectory)../runtimes/win10-x64/native/sealnetnative.dll" />
-	<SEALNetNativeBinaryFiles Condition="$([MSBuild]::IsOsPlatform(Linux))" Include="$(MSBuildThisFileDirectory)../runtimes/linux-x64/native/libsealnetnative.so.@SEAL_VERSION@" />
-    <SEALNetNativeBinaryFiles Condition="$([MSBuild]::IsOsPlatform(OSX))" Include="$(MSBuildThisFileDirectory)../runtimes/osx-x64/native/libsealnetnative.@SEAL_VERSION@.dylib" />
+  	<SEALNetNativeBinaryFiles Condition="$([MSBuild]::IsOsPlatform('Windows'))" Include="$(MSBuildThisFileDirectory)../runtimes/win10-x64/native/sealnetnative.dll" />
+    <SEALNetNativeBinaryFiles Condition="$([MSBuild]::IsOsPlatform('Linux'))" Include="$(MSBuildThisFileDirectory)../runtimes/linux-x64/native/libsealnetnative.so.@SEAL_VERSION@" />
+    <SEALNetNativeBinaryFiles Condition="$([MSBuild]::IsOsPlatform('OSX'))" Include="$(MSBuildThisFileDirectory)../runtimes/osx-x64/native/libsealnetnative.@SEAL_VERSION@.dylib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="@(SEALNetNativeBinaryFiles)">
-      <Link Condition="$([MSBuild]::IsOsPlatform(Windows))">sealnetnative.dll</Link>
-	  <Link Condition="$([MSBuild]::IsOsPlatform(Linux))">libsealnetnative.so.@SEAL_VERSION@</Link>
-	  <Link Condition="$([MSBuild]::IsOsPlatform(OSX))">libsealnetnative.@SEAL_VERSION@.dylib</Link>
+      <Link Condition="$([MSBuild]::IsOsPlatform('Windows'))">sealnetnative.dll</Link>
+      <Link Condition="$([MSBuild]::IsOsPlatform('Linux'))">libsealnetnative.so.@SEAL_VERSION@</Link>
+      <Link Condition="$([MSBuild]::IsOsPlatform('OSX'))">libsealnetnative.@SEAL_VERSION@.dylib</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
