--- a/dotnet/nuget/SEALNet.nuspec.in
+++ b/dotnet/nuget/SEALNet.nuspec.in
@@ -24,8 +24,8 @@
     <file src="@SEAL_LINUX_SEALNETNATIVE_PATH@" target="runtimes/linux-x64/native" />
     <file src="@SEAL_MACOS_SEALNETNATIVE_PATH@" target="runtimes/osx-x64/native" />
     <file src="$LINUX_SEALNETNATIVE$" target="runtimes/linux-x64/native" />
-    <file src="$MAC_SEALNETNATIVE$" target="runtimes/osx-x64/native" />
+    <file src="$MACOS_SEALNETNATIVE$" target="runtimes/osx-x64/native" />
     <file src="../lib/$Configuration$/netstandard2.0/SEALNet.dll" target="lib/netstandard2.0/" />
-    <file src="../../LICENSE" target="LICENSE" />
+    <file src="../../LICENSE" target="LICENSE" />hmm
   </files>
 </package>
