Changed version to 3.4.4.

--- a/dotnet/nuget/SEALNet.nuspec.in
+++ b/dotnet/nuget/SEALNet.nuspec.in
@@ -26,6 +26,6 @@
     <file src="$LINUX_SEALNETNATIVE$" target="runtimes/linux-x64/native" />
     <file src="$MACOS_SEALNETNATIVE$" target="runtimes/osx-x64/native" />
     <file src="../lib/$Configuration$/netstandard2.0/SEALNet.dll" target="lib/netstandard2.0/" />
-    <file src="../../LICENSE" target="LICENSE" />hmm
+    <file src="../../LICENSE" target="LICENSE" />
   </files>
 </package>
