feat: added webassembly intrinsics!

--- a/native/src/CMakeLists.txt
+++ b/native/src/CMakeLists.txt
@@ -139,6 +139,10 @@ if(SEAL_USE_INTRIN)
         set(SEAL_INTRIN_HEADER "x86intrin.h")
     endif()
 
+    if(EMSCRIPTEN)
+        set(SEAL_INTRIN_HEADER "wasm_simd128.h")
+    endif()
+
     check_include_file_cxx(${SEAL_INTRIN_HEADER} HAVE_INTRIN_HEADER)
     if(NOT HAVE_INTRIN_HEADER)
         set(SEAL_USE_INTRIN OFF CACHE BOOL ${SEAL_USE_INTRIN_OPTION_STR} FORCE)
