fix: can be built with or without zlib

--- a/native/src/CMakeLists.txt
+++ b/native/src/CMakeLists.txt
@@ -312,13 +312,23 @@ if(NOT SEAL_USE_ZLIB OR ZLIB_ROOT)
     clear_zlib_cache()
 endif()
 if(SEAL_USE_ZLIB)
-    message(STATUS "Including ZLIB_ROOT path")
-    include_directories(ZLIB_ROOT ${ZLIB_ROOT})
-#     find_package(ZLIB)
-#     if(NOT ZLIB_FOUND)
-#         set(SEAL_USE_ZLIB OFF CACHE BOOL ${SEAL_USE_ZLIB_OPTION_STR} FORCE)
-#         clear_zlib_cache()
-#     endif()
+    if(EMSCRIPTEN)
+        message(STATUS "Looking for specified ZLIB_ROOT path")
+        if (ZLIB_ROOT)
+            include_directories(ZLIB_ROOT ${ZLIB_ROOT})
+            message(STATUS "Looking for specified ZLIB_ROOT path - found")
+        else()
+            message(STATUS "Looking for specified ZLIB_ROOT path - not found")
+            set(SEAL_USE_ZLIB OFF CACHE BOOL ${SEAL_USE_ZLIB_OPTION_STR} FORCE)
+            clear_zlib_cache()
+        endif()
+    else()
+        find_package(ZLIB)
+        if(NOT ZLIB_FOUND)
+            set(SEAL_USE_ZLIB OFF CACHE BOOL ${SEAL_USE_ZLIB_OPTION_STR} FORCE)
+            clear_zlib_cache()
+        endif()
+    endif()
 endif()
 
 # Set the sealnetnative dynamic library file names to be included in creating
@@ -395,10 +405,12 @@ if(SEAL_USE_MSGSL)
     target_link_libraries(seal PUBLIC MSGSL::MSGSL)
 endif()
 
-# if(SEAL_USE_ZLIB)
-#     # Link ZLIB::ZLIB with seal
-#     target_link_libraries(seal PRIVATE ZLIB::ZLIB)
-# endif()
+if(SEAL_USE_ZLIB)
+    if (NOT EMSCRIPTEN)
+        # Link ZLIB::ZLIB with seal
+        target_link_libraries(seal PRIVATE ZLIB::ZLIB)
+    endif()
+endif()
 
 # Associate seal to export SEALTargets
 install(TARGETS seal EXPORT SEALTargets
