--- a/native/examples/SEALExamples.vcxproj
+++ b/native/examples/SEALExamples.vcxproj
@@ -191,7 +191,8 @@
     <ClCompile Include="4_ckks_basics.cpp" />
     <ClCompile Include="5_rotation.cpp" />
     <ClCompile Include="3_levels.cpp" />
-    <ClCompile Include="6_performance.cpp" />
+    <ClCompile Include="6_serialization.cpp" />
+    <ClCompile Include="7_performance.cpp" />
     <ClCompile Include="examples.cpp" />
   </ItemGroup>
   <ItemGroup>
