--- a/dotnet/examples/SEALNetExamples.csproj
+++ b/dotnet/examples/SEALNetExamples.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <Authors>Microsoft Research</Authors>
     <Company>Microsoft Corporation</Company>
     <Description>.NET wrapper examples for Microsoft SEAL</Description>
