--- a/templates/nix-build.yml
+++ b/templates/nix-build.yml
@@ -63,6 +63,12 @@ steps:
           make
       displayName: 'Build SEALNetNative'
 
+    - task: UseDotNet@2
+      displayName: 'Get .NET Core 3.1 SDK'
+      inputs:
+        packageType: 'sdk'
+        version: '3.1.x'
+
     - task: DotNetCoreCLI@2
       displayName: 'Run dotnet unit tests'
       inputs:
