--- a/native/tests/seal/CMakeLists.txt
+++ b/native/tests/seal/CMakeLists.txt
@@ -3,6 +3,7 @@
 
 target_sources(sealtest
     PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}/baseconverter.cpp
         ${CMAKE_CURRENT_LIST_DIR}/batchencoder.cpp
         ${CMAKE_CURRENT_LIST_DIR}/biguint.cpp
         ${CMAKE_CURRENT_LIST_DIR}/ciphertext.cpp
